--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^17.5.2",
-    "mongoose": "^5.1.6"
+    "hapi-swagger": "^9.1.1",
+    "inert": "^5.1.0",
+    "mongoose": "^5.1.6",
+    "vision": "^5.3.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
